syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message NoticeCancel {
    message PKey {
        
        int64 notice_number = 13; // (required) AuctionNotice.noticeNumber
        string accnt = 11; // (required) SR Accnt
        string client_firm = 12; // (optional) SR ClientFirm
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    TickerKey ticker = 101; // (filled in on server) underlier ticker
    DateKey trade_date = 102; // (filled in on server)
    google.protobuf.Timestamp timestamp = 100;
}


